--- a/react-scroll-ts/src/index.css
+++ b/react-scroll-ts/src/index.css
@@ -10,52 +10,75 @@
   }
 
   svg {
-    @apply w-[20px] h-[20px] fill-current;
+    @apply w-[20px] h-[20px] fill-current align-middle;
   }
 
-  .header{
-    @apply z-20 top-0 inset-x-0 bg-white bg-opacity-40;
-    @apply flex justify-center items-center;
-  }
-
-  .header.sticky .nav{
-    @apply z-30 fixed top-[20px] m-auto  animate-slideDownAndFade;
-    @apply bg-green-500 border-opacity-40  bg-opacity-70 shadow-lg shadow-black/[0.03] backdrop-blur-[0.5rem] rounded-full;
-  }
-  
   .nav{
-    @apply  flex gap-5 px-5 py-3;
+    @apply w-auto z-30 fixed top-[20px] left-1/2 -translate-x-1/2;
+    @apply flex justify-center gap-5 px-6 py-2;
+    @apply border border-gray-500 border-opacity-60  bg-white bg-opacity-60 shadow-lg shadow-black/[0.03] backdrop-blur-[0.3rem] rounded-full;
   }
 
   .nav-link {
     @apply flex justify-center items-center gap-2;
-    @apply border border-lime-700 rounded-full py-1 px-5 cursor-pointer;
-    @apply text-lime-700 text-xl;
+    @apply py-[2px] cursor-pointer text-base sm:text-lg text-gray-500 hover:text-gray-700  font-semibold;
   }
 
   .nav-link.active{
-    @apply text-white  bg-lime-800 bg-opacity-60;
+    @apply text-green-700;
+  }
+
+  .nav-link span{
+    @apply leading-none uppercase;
+  }
+
+  .nav-link svg{
+    @apply w-[16px] h-[16px] hidden sm:block;
   }
 
   .element{
-    @apply min-h-screen w-full flex justify-center items-center;
-    @apply odd:bg-white even:bg-slate-100;
+    @apply relative min-h-screen w-full flex justify-center items-center;
+    
+  }
+
+  .element-bg{
+    @apply z-[1] absolute h-auto w-[calc(100%-200px)] max-h-[calc(100%-200px)] opacity-30 text-gray-300/70;
+    @apply bottom-2 sm:top-1/2 left-1/2 -translate-x-1/2 sm:-translate-y-1/2;
+  }
+
+  #profile, #blog{
+    @apply bg-gradient-to-b from-white from-40% to-green-100/80;
+  }
+
+  #skill, #contact{
+    @apply bg-gradient-to-b from-white from-40% to-gray-200;
   }
 
   .skill{
-    @apply rounded p-3 shadow-[0_8px_30px_rgb(0,0,0,0.12)];
+    @apply relative text-gray-700 bg-white bg-opacity-30 border border-gray-300 rounded-xl overflow-hidden p-5;
+  }
+
+  .skill img{
+    @apply opacity-20 absolute w-52 h-52 object-cover object-center right-0 top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2;
   }
 
   .skill h3{
-    @apply text-xl font-bold;
+    @apply text-green-600 font-semibold drop-shadow-[1px_1px_1px_rgba(0,0,0,1)] ps-2 mb-2 text-2xl uppercase text-center;
+  }
+
+  .skill-item{
+    @apply min-w-[250px] sm:min-w-0 flex justify-center items-center text-gray-600 text-xl font-semibold ;
+    @apply border border-gray-300 py-1 px-4 rounded w-full md:w-auto shadow;
   }
 
   .posts{
-    @apply my-2 text-left;
+    @apply m-2 text-left flex flex-col gap-3;
   }
 
   .posts a{
-    @apply block py-3 text-lg hover:text-blue-500 hover:underline hover:underline-offset-2;
+    @apply cursor-pointer bg-white bg-opacity-30 hover:bg-green-500 hover:bg-opacity-40;
+    @apply py-2 px-2 sm:py-2 sm:px-4 text-base sm:text-lg;
+    @apply border border-gray-300 rounded w-full shadow;
   }
 
 }
